# target-duckdb

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  pythonpublish.yml
target_duckdb/: __init__.py  db_sync.py
tests/integration/: conftest.py  test_target_duckdb.py  utils.py
tests/unit/: test_db_sync.py  test_target.py
